--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
+
+/* Scroll bar modification before tailwind takes into effect */
+::-webkit-scrollbar {
+  width: 20px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 8px white;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: lightgrey;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: darkgrey;
+}
 @tailwind components;
 @tailwind utilities;
